data/all_generated_tests/raw_wast_tests/br_ImproperFunctionCallorReturnHandling_899.wast
;; 10. **Branch from Catch Block with Function Call:**     - Description: Create a function with a `try-catch` block where the caught block contains a `br` instruction branching to a label outside the catch block after a function call. Validate the return value.     - Constraint: This test ensures the `br` instruction operates correctly within `try-catch` structures, properly handling operand stack unwinding and return values after catching exceptions.

(assert_invalid
  (module
    (func $branch_from_catch_with_call (result i32)
      (block $outer
        (try $inner
          (do
            (call $some_function)
            (throw 0)
          )
          (catch 0
            (br $outer)
          )
        )
      )
      (i32.const 0)
    )
  )
  "type mismatch"
)